--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Rally da Cidade Perdida</h1>
 
         <div class="passo ativo" id="passo-0" role="group">
-            <img src="img/rally-inicio.png" alt="Carro de rally na linha de partida, pronto para a corrida.">
+            <img src="carrorally.jpeg" alt="Carro de rally na linha de partida, pronto para a corrida.">
             <p>Você é um piloto no lendário **Rally da Cidade Perdida**. A rota, conhecida por suas belezas naturais e desafios extremos, começa agora! Escolha sua rota inicial.</p>
             <button class="btn-proximo" data-proximo="1">Rota Litoral (Rio de Janeiro)</button>
             <button class="btn-proximo" data-proximo="2">Rota Histórica (Pernambuco)</button>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="passo" id="passo-4" role="group">
-            <img src="img/rally-desistencia.png" alt="Carro de rally quebrado ou atolado, simbolizando o fim da corrida.">
+            <img src="rallycruzando.avif" alt="Carro de rally quebrado ou atolado, simbolizando o fim da corrida.">
             <p>O motor superaquece ou a suspensão quebra. Você decide que a corrida é grande demais e volta para o box. **Fim de Jogo.**</p>
         </div>
 
@@ -74,7 +74,7 @@
         </div>
 
         <div class="passo" id="passo-11" role="group">
-            <img src="img/rally-vitoria.png" alt="Carro de rally cruzando a linha de chegada no cenário da Cidade Perdida/pódio.">
+            <img src="rallycapôaberto.webp" alt="Carro de rally cruzando a linha de chegada no cenário da Cidade Perdida/pódio.">
             <p>Você é o **campeão** do Rally da Cidade Perdida! O verdadeiro prêmio é a honra e o prestígio de ter conquistado a rota mais difícil do mundo! **Vitória!**</p>
         </div>
 
