--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         
         <div class="passo" id="passo-1" role="group">
-            <img src="img/rio-tijuca.png" alt="Estrada sinuosa subindo o Pico da Tijuca no Rio de Janeiro.">
+            <img src="riodejaneiro.jpeg" alt="Estrada sinuosa subindo o Pico da Tijuca no Rio de Janeiro.">
             <p>Você começa no Rio de Janeiro, subindo a estrada sinuosa do Pico da Tijuca. É uma subida íngreme ao amanhecer para o primeiro ponto de checagem. Como você pilota?</p>
             <button class="btn-proximo" data-proximo="3">Acelerar ao máximo para o topo</button>
             <button class="btn-proximo" data-proximo="4">Pilotar com cautela para preservar o carro</button>
         </div>
         
         <div class="passo" id="passo-2" role="group">
-            <img src="img/olinda-viela.png" alt="Vielas de paralelepípedos em Olinda, Pernambuco.">
+            <img src="pernabuco.pjeg" alt="Vielas de paralelepípedos em Olinda, Pernambuco.">
             <p>Em Pernambuco, você está nas vielas históricas de Olinda. O GPS indica que o ponto de checagem está escondido no centro. Por onde você corta o tráfego?</p>
             <button class="btn-proximo" data-proximo="5">Atravessar o centro das igrejas antigas (curvas fechadas)</button>
             <button class="btn-proximo" data-proximo="6">Pegar a rota de contorno pelas praias (mais longa, menos obstáculos)</button>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="passo" id="passo-7" role="group">
-            <img src="img/amazonas-rio.png" alt="Rio amazônico bifurcado, com dois canais.">
+            <img src="amazonas.jpeg" alt="Rio amazônico bifurcado, com dois canais.">
             <p>No Amazonas, a pista se divide em um rio barrento bifurcado. Qual caminho você escolhe para atravessar?</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda (Atalho, mas profundo)</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita (Mais longo, mas raso)</button>
