--- a/index.html
+++ b/index.html
@@ -36,53 +36,5 @@
             <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
 
-        <div class="passo" id="passo-4" role="group">
-            <img src="rallycruzando.avif" alt="Carro de rally quebrado ou atolado, simbolizando o fim da corrida.">
-            <p>O motor superaquece ou a suspensão quebra. Você decide que a corrida é grande demais e volta para o box. **Fim de Jogo.**</p>
-        </div>
-
-        <div class="passo" id="passo-5" role="group">
-            <p>Você desliza pelas curvas de Olinda e encontra o mapa do rally atrás de um painel de sinalização antigo. Próximo destino: **Amazonas**.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
-        </div>
-
-        <div class="passo" id="passo-6" role="group">
-            <p>A rota pelas praias termina em um trecho de areia fofa e você atola. Perda de tempo valioso!</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e arriscar pelas igrejas</button>
-        </div>
-
-        <div class="passo" id="passo-7" role="group">
-            <img src="amazonas.jpeg" alt="Rio amazônico bifurcado, com dois canais.">
-            <p>No Amazonas, a pista se divide em um rio barrento bifurcado. Qual caminho você escolhe para atravessar?</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda (Atalho, mas profundo)</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita (Mais longo, mas raso)</button>
-        </div>
-
-        <div class="passo" id="passo-8" role="group">
-            <p>De volta às vielas, você finalmente encontra a marcação correta. Acelerar para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
-        </div>
-
-        <div class="passo" id="passo-9" role="group">
-            <p>O rio à esquerda leva você a uma cachoeira escondida. As inscrições na rocha revelam a pista final: a entrada para a 'Cidade Perdida' é logo adiante.</p>
-            <button class="btn-proximo" data-proximo="11">Cruzar a linha de chegada</button>
-        </div>
-
-        <div class="passo" id="passo-10" role="group">
-            <p>O rio à direita termina em uma área pantanosa. Seu carro atola e você perde minutos preciosos.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
-        </div>
-
-        <div class="passo" id="passo-11" role="group">
-            <img src="rallycapôaberto.webp" alt="Carro de rally cruzando a linha de chegada no cenário da Cidade Perdida/pódio.">
-            <p>Você é o **campeão** do Rally da Cidade Perdida! O verdadeiro prêmio é a honra e o prestígio de ter conquistado a rota mais difícil do mundo! **Vitória!**</p>
-        </div>
-
-        <div class="passo" id="passo-12" role="group">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as marcações que levam à pista final.</p>
-            <button class="btn-proximo" data-proximo="11">Cruzar a linha de chegada</button>
-        </div>
-    </main>
-    <script src="script.js"></script>
-</body>
-</html>
+        <div class="passo" id="pass
+            
